# fakelogs

./: .gitmodules  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml  rust.yml
ci/: build-image.sh  kube-ci.sh
example/: fakejson.yaml
kube/: install.yaml
src/: cli.rs  config.rs  generators.rs  log_generator.rs  main.rs
